# Core

./: .gitignore  CMakeLists.txt  README.md  main.cpp
includes/classes/: Logger.hpp  Singleton.hpp
includes/enums/: color.h
includes/interfaces/: IComponent.hpp
srcs/: Logger.cpp
